#257175 - Base Distribution as a NetBeans project template

--- a/html.ojet/src/org/netbeans/modules/html/ojet/ui/resources/NewOracleJETBaseDistributionDescription.html
+++ b/html.ojet/src/org/netbeans/modules/html/ojet/ui/resources/NewOracleJETBaseDistributionDescription.html
@@ -2,7 +2,7 @@
 <!--
 DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-Copyright 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright 2016 Oracle and/or its affiliates. All rights reserved.
 
 Oracle and Java are registered trademarks of Oracle and/or its affiliates.
 Other names may be trademarks of their respective owners.
@@ -38,11 +38,11 @@ made subject to such option by the copyright holder.
 
 Contributor(s):
 
-Portions Copyrighted 2014 Sun Microsystems, Inc.
+Portions Copyrighted 2016 Sun Microsystems, Inc.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
