fixing Bug #258644 Update references on Oracle Solaris Studio

--- a/cnd.asm/src/org/netbeans/modules/cnd/asm/core/resources/il-file.html
+++ b/cnd.asm/src/org/netbeans/modules/cnd/asm/core/resources/il-file.html
@@ -43,6 +43,6 @@ Portions Copyrighted 2008 Sun Microsystems, Inc.
     <title>Inline Template File</title>
 </head>
 <body>
-    Inline Template file (supported in Oracle Solaris Studio)
+    Inline Template file (supported in Oracle Developer Studio)
 </body>
 </html>
