--- a/cnd/javahelp/org/netbeans/modules/cnd/help/GettingStarted/FilesWindow.html
+++ b/cnd/javahelp/org/netbeans/modules/cnd/help/GettingStarted/FilesWindow.html
@@ -78,9 +78,9 @@ Copyright &copy; 2007, 2015 Oracle and/or its affiliates. All rights reserved.
           The output directory for object (<tt>.o</tt>) files. This directory may contain
           subdirectories that are named for the project configuration and tool collection that were
           used to build the project. For example, if you build your project while the Debug
-          configuration is active, and you are using the Oracle Solaris Studio tool collection on a
+          configuration is active, and you are using the Oracle Developer Studio tool collection on a
           Oracle Solaris operating system on an x86 system, you will have Debug and
-          OracleSolarisStudio-Solaris-x86 subdirectories. These subdirectories enable you to keep
+          OracleDeveloperStudio-Solaris-x86 subdirectories. These subdirectories enable you to keep
           separate build products for different build environments.
         </td>
       </tr>
