--- a/cnd/javahelp/org/netbeans/modules/cnd/help/WorkingWithCandC++Projects/CodeAssistanceWizardP2.html
+++ b/cnd/javahelp/org/netbeans/modules/cnd/help/WorkingWithCandC++Projects/CodeAssistanceWizardP2.html
@@ -59,7 +59,7 @@ Copyright &copy; 2007, 2015 Oracle and/or its affiliates. All rights reserved.
     <p>
        The Explore Executable or Library File mode and the Explore Object Files in Folder mode
       require that the project has been built with debugging information. If you are using a Oracle
-      Solaris Studio compiler, building with the <tt>-g</tt> option is sufficient. If you are using
+      Developer Studio compiler, building with the <tt>-g</tt> option is sufficient. If you are using
       a GNU compiler, use the following options:
     </p>
 <pre>
