--- a/cnd/javahelp/org/netbeans/modules/cnd/help/WorkingWithCandC++Projects/RemoteDevelopmentConfigureHost.html
+++ b/cnd/javahelp/org/netbeans/modules/cnd/help/WorkingWithCandC++Projects/RemoteDevelopmentConfigureHost.html
@@ -28,7 +28,7 @@ Copyright &copy; 2009, 2015 Oracle and/or its affiliates. All rights reserved.
         The remote host must run the Secure Shell (SSH) daemon, <tt>sshd</tt>.
       </li>
       <li>
-        At least one tool collection (GNU, Oracle Solaris Studio, or Sun Studio) must be accessible
+        At least one tool collection (GNU, Oracle Developer Studio) must be accessible
         on the remote host
       </li>
       <li>
