--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/resources/samples/pi.html
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/resources/samples/pi.html
@@ -6,6 +6,6 @@
 
 <HTML>
   <BODY>
-    Five different implementations of calculating Pi. Some configurations may work with Oracle Solaris Studio compilers only.
+    Five different implementations of calculating Pi. Some configurations may work with Oracle DEveloper Studio compilers only.
   </BODY>
 </HTML>
