--- a/editor.lib2/src/org/netbeans/spi/editor/caret/package.html
+++ b/editor.lib2/src/org/netbeans/spi/editor/caret/package.html
@@ -70,7 +70,23 @@ Portions Copyrighted 2016 Sun Microsystems, Inc.
     });
   </code>
   </pre>
-
+  
+  <h3><a name="navigation-filters">Navigation Filters</a></h3>
+  <p>
+  A boilerplate <a href="CascadingNavigationFilter.html">CascadingNavigationFilter</a> is provided to 
+  make implementation of <a href="@JDK@/javax/swing/text/NavigationFilter.html">NavigationFilters</a> easier. The boilerplate
+  remembers the preceding filter and will delegate to it. If you create a subclass, you may call <code>super</code> methods 
+  <code>moveDot</code> and <code>setDot</code> to delegate to that previous filter and ultimately perform the action. Calling
+  methods of <a href="@JDK@/javax/swing/text/NavigationFilter.FilterBypass.html">FilterBypass</a> will perform the caret action
+  directly.
+  </p>
+  <p>
+  The filter can find out the <a href="../../../api/editor/caret/package-summary.html#movement-origins">origin of the movement</a> or
+  the <a href="../../../api/editor/caret/CaretItem.html">info for actual caret</a> being moved. The 
+  <a href="@JDK@/javax/swing/text/NavigationFilter.FilterBypass.html">FilterBypass</a> implementation passed to 
+  <a href="@JDK@/javax/swing/text/NavigationFilter.html">NavigationFilter</a> can be downcasted to <a href="NavigationFilterBypass.html">NavigationFilterBypass</a>,
+  which provides this extended information.
+  </p>
   <h3><a name="compatibilty">Backwards compatibility</a></h3>
   
   <h3><a name="usecases">Use cases</a></h3>
