fixed Bug #258955 update references on default user dir of product based on Netbeans platform

--- a/cnd/javahelp/org/netbeans/modules/cnd/help/GettingStarted/Memory.html
+++ b/cnd/javahelp/org/netbeans/modules/cnd/help/GettingStarted/Memory.html
@@ -82,10 +82,10 @@ running, you can also add the garbage collector switches <tt>-J-XX:+UseConcMarkS
 <a name="oss"> <p><b>To change the heap size for Oracle Developer Studio IDE:</b></p></a>
 <ol>
 <li>In your <tt>$HOME/.developer/ide-<i>version-platform</i></tt> directory, create the <tt>etc</tt> directory.</li>
-<li>Copy the file <tt><i>devstudio-intall-dir</i>/lib/devstudio/etc/devstudio.conf</tt> to the <tt>$HOME/.devstudio/ide-<i>version-platform</i>/etc</tt> directory.
+<li>Copy the file <tt><i>devstudio-intall-dir</i>/lib/devstudio/etc/devstudio.conf</tt> to the <tt>$HOME/.oracledevstudio/ide-<i>version-platform</i>/etc</tt> directory.
 <br>
 For example:
-<pre>cp /opt/developerstudio12.5/lib/devstudio/etc/devstudio.conf $HOME/.devstudio/ide-Oracle_Developer_Studio12.5-SunOS-sparc/etc</pre>
+<pre>cp /opt/developerstudio12.5/lib/devstudio/etc/devstudio.conf $HOME/.oracledevstudio/ide-12.5-SunOS-sparc/etc</pre>
 </li>
 <li>In your copy of the <tt>devstudio.conf</tt> file, add the <tt>-J-Xmx</tt>
 command line Java startup switch (bolded below).
