--- a/collab.provider.im/service/src/org/netbeans/lib/collab/package.html
+++ b/collab.provider.im/service/src/org/netbeans/lib/collab/package.html
@@ -1,3 +1,42 @@
+<!--
+DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
+
+Copyright (c) 2007, 2016 Oracle and/or its affiliates. All rights reserved.
+
+Oracle and Java are registered trademarks of Oracle and/or its affiliates.
+Other names may be trademarks of their respective owners.
+
+The contents of this file are subject to the terms of either the GNU
+General Public License Version 2 only ("GPL") or the Common
+Development and Distribution License("CDDL") (collectively, the
+"License"). You may not use this file except in compliance with the
+License. You can obtain a copy of the License at
+http://www.netbeans.org/cddl-gplv2.html
+or nbbuild/licenses/CDDL-GPL-2-CP. See the License for the
+specific language governing permissions and limitations under the
+License.  When distributing the software, include this License Header
+Notice in each file and include the License file at
+nbbuild/licenses/CDDL-GPL-2-CP.  Oracle designates this
+particular file as subject to the "Classpath" exception as provided
+by Oracle in the GPL Version 2 section of the License file that
+accompanied this code. If applicable, add the following below the
+License Header, with the fields enclosed by brackets [] replaced by
+your own identifying information:
+"Portions Copyrighted [year] [name of copyright owner]"
+
+If you wish your version of this file to be governed by only the CDDL
+or only the GPL Version 2, indicate your decision by adding
+"[Contributor] elects to include this software in this distribution
+under the [CDDL or GPL Version 2] license." If you do not indicate a
+single choice of license, a recipient has the option to distribute
+your version of this file under either the CDDL, the GPL Version 2 or
+to extend the choice of license to its licensees as provided above.
+However, if you add GPL Version 2 code and therefore, elected the GPL
+Version 2 license, then the option applies only if the new code is
+made subject to such option by the copyright holder.
+
+Contributor(s):
+-->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -11,14 +50,14 @@
 &nbsp;
 <h2>Overview</h2>
 
-The collab service is the communication layer allowing netbeans users to 
-communicate in real-time, by providing access to Conference, Presence, Data Streaming, 
-News and Notification services.  
+The collab service is the communication layer allowing netbeans users to
+communicate in real-time, by providing access to Conference, Presence, Data Streaming,
+News and Notification services.
 
 The Collab Service API may also be used directly in order to build application
 leveraging these services.  Possible applications include:
 <ul>
-<li>portal channels displaying contact lists and allowing 
+<li>portal channels displaying contact lists and allowing
 real-time communication.
 </li>
 <li>presence status display and initiation of conferences from other Web-based
