Improve PHP sample TodoList

--- a/php.samples/src/org/netbeans/modules/php/samples/descriptions/TodoList.html
+++ b/php.samples/src/org/netbeans/modules/php/samples/descriptions/TodoList.html
@@ -46,7 +46,7 @@ Portions Copyrighted 2011 Sun Microsystems, Inc.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        TodoList is a PHP sample application that does not use any PHP framework. It demonstrates possibilities
+        TodoList is a PHP (5.4+) sample application that does not use any PHP framework. It demonstrates possibilities
         how to: prevent public access to your scripts, config your application, access your database data,
         split scripts and templates, handle expected and unexpected exceptions and more.
     </body>
