--- a/php.samples/samples_src/TodoList/readme.html
+++ b/php.samples/samples_src/TodoList/readme.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
 DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
@@ -39,27 +40,32 @@ Contributor(s):
 
 Portions Copyrighted 2011 Sun Microsystems, Inc.
 -->
-<!DOCTYPE html>
 <html>
 <head>
     <title>TODO List - sample application for NetBeans IDE</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="web/css/style.css" rel="stylesheet" type="text/css" />
-    <link href="web/css/layout.css" rel="stylesheet" type="text/css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
+    <link href="web/css/layout.css" rel="stylesheet" type="text/css" >
+    <link href="web/css/style.css" rel="stylesheet" type="text/css" >
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" >
 </head>
 <body id="page">
-    <div class="tail-top-right"></div>
     <div id="main">
         <!-- header -->
-        <div id="header"></div>
+        <div id="header">
+            <i class="material-icons logo">assignment</i>
+            <div class="title">
+                <h1>TODO List</h1>
+                <h2>NetBeans PHP Sample Application</h2>
+            </div>
+            <div class="nb">
+                <a href="https://netbeans.org/features/php/" target="_blank" title="NetBeans PHP Support"><img src="web/img/NB-IDE-logo.png" alt="NetBeans logo"></a>
+            </div>
+        </div>
         <!-- content -->
         <div id="content">
             <div class="wrapper">
                 <div class="col-2">
                     <div class="indent">
-
-                        <h1>TODO List</h1>
-                        <h2>NetBeans PHP Sample Application</h2>
 
                         <h3>What is TODO List?</h3>
                         <p class="p">TODO List is a personal list of things that are to be done.
@@ -85,83 +91,65 @@ Portions Copyrighted 2011 Sun Microsystems, Inc.
                         Follow these before you run the sample:
                         <ul class="p">
                             <li>Install NetBeans IDE with PHP support</li>
-                            <li>Install and configure PHP Runtime</li>
-                            <li>Install and configure MySQL database</li>
+                            <li>Install and configure PHP Runtime (PHP 5.4 or newer)</li>
                         </ul>
 
                         <h3>What is included?</h3>
                         <ul class="p">
                             <li>NetBeans <i>PHP Application</i> Project</li>
-                            <li>Database SQL Script - Use this script to populate tables and sample records</li>
+                            <li>Database together with SQL Script</li>
                             <li>Additional Stylesheet, JavaScript</li>
                         </ul>
 
                         <h3>Before the start</h3>
                         <ul class="p">
                             <li>If you want to try the sample out, follow <a href="#getting_started">Getting Started</a> guidelines.</li>
-                            <li>In case of you want to try debugging features of the NetBeans IDE,
+                            <li>If you want to try debugging features of the NetBeans IDE,
                                 follow the <a href="#debugging">Debugging</a> guidelines.</li>
                         </ul>
 
                         <h3 id="getting_started">Getting Started</h3>
                         <ol class="p">
                             <li>
-                                Firstly, we set database authentication in <i>config/config.ini</i>,
-                                which is stored in TODO List Project directory.<br>
-                                Just update login and password
-                                fields in the configuration file, so they are the same as MySQL ones.
+                                As a database, the application uses
+                                <a href="https://www.sqlite.org/" target="_blank">SQLite</a> database
+                                with some sample data (see <i>db</i> directory).
                             </li>
                             <li>
-                                Secondly, we create the database and populate it with data:
-                                <ol type="a">
-                                    <li>Create new MySQL database named <i>todolist</i> in phpMyAdmin (or any other MySQL administration tool).</li>
-                                    <li>Run <i>db/mysql.sql</i> script stored in TODO List Project directory.
-                                        The script creates table and fills it with sample data.</li>
-                                </ol>
-                            </li>
-                            <li>The strongly preferred way is to create all your PHP applications underneath the documents directory (<i>htdocs</i>)
-                                of your web server (so the web server can access them directly, e.g. <i>http://localhost/TodoList/web/</i>). If it is not
-                                your case, then set project properties to deploy project sucessfully to it:
-                                <ol type="a">
-                                    <li>Right-click on the <i>TodoList</i> project node and select <i>Properties</i>.</li>
-                                    <li>Check the option <i>Copy files from Sources Folder to another location</i>.</li>
-                                    <li>In <i>Copy to Folder</i> field specify the path of the documents directory (<i>htdocs</i>)
-                                        of your web server.</li>
-                                    <li>Specify the <i>Project URL</i> to be appropriate with your settings from previous field and
-                                        also with Web Server setup.</li>
-                                    <li>Confirm the settings.</li>
-                                </ol>
+                                As a server, the application uses the PHP built-in web server.
                             </li>
                             <li>
-                                Finally, we can run the project. Right-click the project node again and select <i>Run Project</i>
+                                Run the project. Right-click the project node again and select <i>Run Project</i>
                                 or use the <i>Run Project</i> icon in the main menu toolbar.
                                 The sample PHP application should open in the Web browser.
                             </li>
-                            <li>Play futher with the sample :)</li>
+                            <li>Play further with the sample. :)</li>
                         </ol>
 
                         <h3 id="debugging">Debugging</h3>
                         <p class="p">
                             These steps should enable you the debugging option at the sample project,
                             <a href="http://wiki.netbeans.org/HowToConfigureXDebug" target="_blank">if you already have PHP debugger
-                            installed and configured</a>.<br>
-                            For demonstrating the PHP debugger in NetBeans we have to put the project to the web server documents directory (<i>htdocs</i>):
+                            installed and configured</a>.
                         </p>
                         <ol class="p">
-                            <li>Create new <i>TODO ListSample Application</i> with following settings:</li>
-                            <li>Set the <i>Project Folder</i> to your web server documents (<i>htdocs</i>) directory, for example:
-                                <i>C:\Program Files\Apache2.2\htdocs\TodoList</i></li>
-                            <li>In project properies (right-click the project node and select <i>Properties</i>.) set the <i>Project URL</i>
-                                to be appropriate with previous setting, for example: <i>http://localhost/TodoList/web/</i></li>
-                            <li>To debug, right-click the project node and select <i>Debug Project</i>
-                                or use the <i>Debug Project</i> icon in the main menu toolbar.</li>
+                            <li>
+                                To debug the application, right-click the project node and select
+                                <i>Debug Project</i> or use the <i>Debug Project</i> icon
+                                in the main menu toolbar.
+                            </li>
+                            <li>
+                                Put breakpoint somewhere in any PHP script and (re)load
+                                the proper URL.
+                            </li>
+                            <li>Play further with the sample. :)</li>
                         </ol>
 
                         <h3>Project folder's structure</h3>
                         <ul class="p">
                             <li><i>config</i> - Contains configuration file <i>config.ini</i> where you can edit the DB connection settings.</li>
                             <li><i>dao</i> - Contains DAO (Data Access Object) classes.</li>
-                            <li><i>db</i> - Contains SQL dump for creating the database.</li>
+                            <li><i>db</i> - Contains the database and SQL dump for its creating.</li>
                             <li><i>exception</i> - Contains custom exceptions.</li>
                             <li><i>layout</i> - Contains layout common for all web pages.</li>
                             <li><i>mapping</i> - Contains classes used for mapping from database to model classes.</li>
@@ -172,9 +160,6 @@ Portions Copyrighted 2011 Sun Microsystems, Inc.
                             <li><i>web</i> - Contains publicly accessible files (PHP scripts, CSS, JS, images).</li>
                         </ul>
 
-                        <h3>Credits</h3>
-                        <p class="p">This sample application uses great <a href="http://www.famfamfam.com/lab/icons/silk/">SILK icons</a> created by Mark James.</p>
-
                     </div>
                 </div>
             </div>
@@ -182,7 +167,7 @@ Portions Copyrighted 2011 Sun Microsystems, Inc.
         <!-- footer -->
         <div id="footer">
             <div class="indent">
-                <div class="fleft"><a href="https://blogs.oracle.com/netbeansphp/">NetBeans PHP team</a>, 2011 &copy; Copyright Oracle corp., All rights reserved</div>
+                <div class="fleft"><a href="https://blogs.oracle.com/netbeansphp/">NetBeans PHP team</a>, 2016 &copy; Copyright Oracle corp., All rights reserved</div>
             </div>
         </div>
     </div>
