Fixing easel sample; removing js libraries.

--- a/web.client.samples/EaselDemo/public_html/about.html
+++ b/web.client.samples/EaselDemo/public_html/about.html
@@ -43,11 +43,11 @@ Contributor(s):
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="css/style.css" type="text/css"/>
-        <link rel="stylesheet" href="css/bootstrap.css" type="text/css"/>
-        <link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css"/>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/css/bootstrap.css" type="text/css"/>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/css/bootstrap-responsive.css" type="text/css"/>
 
-        <script type="text/javascript" src="js/jquery.js"></script>
-        <script type="text/javascript" src="js/libs/jqueryui-1.8.16/jquery-ui.js"></script>
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.js"></script>
         <script type="text/javascript" src="js/about.js"></script>
 
         <style type="text/css">
@@ -174,7 +174,7 @@ Contributor(s):
         </div>
         
         <script type="text/javascript" src="js/draganddrop.js"></script>
-        <script src="js/bootstrap-dropdown.js"></script>
-		<script src="js/bootstrap-collapse.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap-dropdown.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap-collapse.js"></script>
     </body>
 </html>
