--- a/web.client.samples/EaselDemo/public_html/index.html
+++ b/web.client.samples/EaselDemo/public_html/index.html
@@ -48,8 +48,8 @@ Contributor(s):
         <script type="text/javascript">window.onload = getWelcome;</script>
 
         <!-- Le styles -->
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css"/>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/css/bootstrap.css" type="text/css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/css/bootstrap-responsive.css" type="text/css"/>
         <link rel="stylesheet" href="css/style.css" type="text/css"/>
 
         <style type="text/css">
@@ -129,19 +129,19 @@ Contributor(s):
              
 
         </div>
-        <script src="js/jquery.js"></script>
-        <script src="js/bootstrap-transition.js"></script>
-        <script src="js/bootstrap-alert.js"></script>
-        <script src="js/bootstrap-modal.js"></script>
-        <script src="js/bootstrap-dropdown.js"></script>
-        <script src="js/bootstrap-scrollspy.js"></script>
-        <script src="js/bootstrap-tab.js"></script>
-        <script src="js/bootstrap-tooltip.js"></script>
-        <script src="js/bootstrap-popover.js"></script>
-        <script src="js/bootstrap-button.js"></script>
-        <script src="js/bootstrap-collapse.js"></script>
-        <script src="js/bootstrap-carousel.js"></script>
-        <script src="js/bootstrap-typeahead.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap-transition.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap-alert.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap-modal.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap-dropdown.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap-scrollspy.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap-tab.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap-tooltip.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap-popover.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap-button.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap-collapse.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap-carousel.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap-typeahead.js"></script>
 
     </body>
 </html>
