--- a/websvc.rest.samples/CustomerDB/web/index.html
+++ b/websvc.rest.samples/CustomerDB/web/index.html
@@ -42,13 +42,13 @@ Contributor(s):
     <head>
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel='stylesheet' href='http://mottie.github.com/tablesorter/css/theme.blue.css'>
-        <link rel='stylesheet' href='http://mottie.github.com/tablesorter/addons/pager/jquery.tablesorter.pager.css'>
-        <script src='js/libs/underscore.js/underscore.js'></script>
-        <script src='js/libs/jquery/jquery.js'></script>
-        <script src='js/libs/backbone.js/backbone.js'></script>
-        <script src='http://mottie.github.com/tablesorter/js/jquery.tablesorter.min.js'></script>
-        <script src='http://mottie.github.com/tablesorter/addons/pager/jquery.tablesorter.pager.js'></script>
+        <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.26.2/css/theme.blue.min.css'>
+        <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.26.2/css/jquery.tablesorter.pager.min.css'>
+        <script src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js'></script>
+        <script src='//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.js'></script>
+        <script src='//ajax.cdnjs.com/ajax/libs/backbone.js/1.0.0/backbone.js'></script>
+        <script src='//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.26.2/js/jquery.tablesorter.min.js' type="text/javascript"></script>
+        <script src='//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.26.2/js/extras/jquery.tablesorter.pager.min.js' type="text/javascript"></script>
         <script src='CustomerClient.js'></script>
     </head>
     <body>
@@ -57,11 +57,11 @@ Contributor(s):
         <table id='datatable' class='tablesorter-blue'>
         </table>
         <div class='pager' id='pager'>
-            <img src='http://mottie.github.com/tablesorter/addons/pager/icons/first.png' class='first' alt='First'/>
-            <img src='http://mottie.github.com/tablesorter/addons/pager/icons/prev.png' class='prev' alt='Prev'/>
+            <img src='//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.26.2/css/images/first.png' class='first' alt='First'/>
+            <img src='//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.26.2/css/images/prev.png' class='prev' alt='Prev'/>
             <span class='pagedisplay'></span> <!-- this can be any element, including an input -->
-            <img src='http://mottie.github.com/tablesorter/addons/pager/icons/next.png' class='next' alt='Next'/>
-            <img src='http://mottie.github.com/tablesorter/addons/pager/icons/last.png' class='last' alt='Last'/>
+            <img src='//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.26.2/css/images/next.png' class='next' alt='Next'/>
+            <img src='//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.26.2/css/images/last.png' class='last' alt='Last'/>
             <select class='pagesize'>
                 <option selected='selected' value='10'>10</option>
                 <option value='20'>20</option>
