Repaired files that were corrupted by adding the license.

--- a/uihandler/test/unit/src/org/netbeans/modules/uihandler/error_ja.html
+++ b/uihandler/test/unit/src/org/netbeans/modules/uihandler/error_ja.html
@@ -40,29 +40,29 @@ Contributor(s):
 <HTML>
 <HEAD>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=euc-jp"> </META>
-    <title>ï¿½ï¿½ï¿½Þ¥ï¿½ï¿½Report Problem</title>
+    <title>¥³¥Þ¥ó¥ÉReport Problem</title>
     <!--
     <link rel="stylesheet" type="text/css" href="http://www.netbeans.org/netbeans.css"/>
     -->
 </HEAD>
 
-<BODY> ï¿½ï¿½ï¿½Þ¥ï¿½ï¿½
+<BODY> ¥³¥Þ¥ó¥É
 
 
 <H3>You have found a bug in the application!</H3>
-<P>ï¿½ï¿½ï¿½Þ¥ï¿½ï¿½
+<P>¥³¥Þ¥ó¥É
     Actual system of direct bug uploading to the collecting server is now out of order.
     You can help the NetBeans.org project by reporting this problem to
-    our existing bug tracking system using the <q>Report to Issuezilla ï¿½ï¿½ï¿½Þ¥ï¿½ï¿½</q> button bellow.
+    our existing bug tracking system using the <q>Report to Issuezilla ¥³¥Þ¥ó¥É</q> button bellow.
 </P>
-<P>ï¿½ï¿½ï¿½Þ¥ï¿½ï¿½
+<P>¥³¥Þ¥ó¥É
     Thank you for helping us make NetBeans better!
 </P>
 
 <form action="http://statistics.netbeans.org/analytics/upload.jsp" method="post">
-    <input type="hidden" name="submit" value="&amp;Submit Data ï¿½ï¿½ï¿½Þ¥ï¿½ï¿½ "></input>
-    <input type="hidden" name="auto-submit" value="&amp;Automatic Submit ï¿½ï¿½ï¿½Þ¥ï¿½ï¿½ "></input>
-    <input type="hidden" name="view-data" value="&amp;View Data ï¿½ï¿½ï¿½Þ¥ï¿½ï¿½" align="left" alt="&amp;Hide Data ¥³¥Þ¥ó¥É "></input>
+    <input type="hidden" name="submit" value="&amp;Submit Data ¥³¥Þ¥ó¥É "></input>
+    <input type="hidden" name="auto-submit" value="&amp;Automatic Submit ¥³¥Þ¥ó¥É "></input>
+    <input type="hidden" name="view-data" value="&amp;View Data ¥³¥Þ¥ó¥É" align="left" alt="&amp;Hide Data ¥³¥Þ¥ó¥É "></input>
     <input type="hidden" name="exit" value="&amp;Cancel ¥³¥Þ¥ó¥É "></input>
 </form>
 <!--
