--- a/uihandler/test/unit/src/org/netbeans/modules/uihandler/index_ja.html
+++ b/uihandler/test/unit/src/org/netbeans/modules/uihandler/index_ja.html
@@ -40,13 +40,13 @@ Contributor(s):
 <HTML>
 <HEAD>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=x-euc-jp"> </META>
-    <title>ï¿½ï¿½ï¿½Þ¥ï¿½ï¿½Welcome to UI Gestures Collector</title>
+    <title>¥³¥Þ¥ó¥ÉWelcome to UI Gestures Collector</title>
     <link rel="stylesheet" type="text/css" href="http://www.netbeans.org/nonav/uigestures/index.css"></link>
     <meta http-equiv="Content-Type" content="text/html; charset=x-euc-jp"></meta>
 </HEAD>
 
-<BODY> ï¿½ï¿½ï¿½Þ¥ï¿½ï¿½
-<p>ï¿½ï¿½ï¿½Þ¥ï¿½ï¿½
+<BODY> ¥³¥Þ¥ó¥É
+<p>¥³¥Þ¥ó¥É
     You can now submit data about the UI actions you did in the IDE and
     help us make NetBeans better. <a href="http://devtools.sfbay/teams/DeveloperTools_I18N/gestures/info_ja.html">
     Read more...</a>
@@ -56,8 +56,8 @@ Contributor(s):
 <!--
     <form action="http://devtools.sfbay/teams/DeveloperTools_I18N/gestures/post_ja.html" method="post">
 -->
-    <input type="hidden" name="submit" value="&amp;Submit Data ï¿½ï¿½ï¿½Þ¥ï¿½ï¿½ "></input>
-    <input type="hidden" name="auto-submit" value="&amp;Automatic Submit ï¿½ï¿½ï¿½Þ¥ï¿½ï¿½ "></input>
+    <input type="hidden" name="submit" value="&amp;Submit Data ¥³¥Þ¥ó¥É "></input>
+    <input type="hidden" name="auto-submit" value="&amp;Automatic Submit ¥³¥Þ¥ó¥É "></input>
     <input type="hidden" name="view-data" value="&amp;View Data ¥³¥Þ¥ó¥É" align="left" alt="&amp;Hide Data ¥³¥Þ¥ó¥É "></input>
     <input type="hidden" name="exit" value="&amp;Cancel ¥³¥Þ¥ó¥É "></input>
 </form>
