--- a/ide.branding/release-toplevel/README.html
+++ b/ide.branding/release-toplevel/README.html
@@ -25,7 +25,7 @@
  * your own identifying information:
  * "Portions Copyrighted [year] [name of copyright owner]"
  *
- * Contributor(s):developers/spl.html.
+ * Contributor(s):
  *
  * The Original Software is NetBeans. The Initial Developer of the Original
  * Software is Sun Microsystems, Inc. Portions Copyright 1997-2008 Sun
